Add description, author, robots para melhoria do SEO

--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Abner Ferreira | Dev Front-end</title>
+
+    <!-- Meta descrição bilíngue para SEO -->
+    <meta name="description" content="Portfólio de Abner Rodrigues Ferreira, desenvolvedor front-end especializado em ReactJS, NextJS. Experiência em e-commerces, UX/UI, acessibilidade e performance web com foco em boas práticas e design system. Portfolio of Abner Rodrigues Ferreira, front-end developer specialized in ReactJS, NextJS. Experienced in e-commerce, UX/UI, accessibility, and web performance with a strong focus on best practices and design systems.">
+
+    <!-- SEO básico -->
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Abner Rodrigues Ferreira" />
+
+    <!-- Favicon e ícones para dispositivos -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio AbnerDev</title>
   </head>
   <body>
     <div id="root"></div>
